grammar/machine_code.peg
program = statement*

statement = current:state ',' read:symbol ',' next:state ',' write:symbol ',' direction ';' newline?

state = 's' digit+

digit = [0-9]

symbol = [a-zA-Z0-9_]

direction = 'L' / 'R'

newline = '\n'
